RESOLVED FIXED24997
Race conditions in icon database threading code
https://bugs.webkit.org/show_bug.cgi?id=24997
Summary Race conditions in icon database threading code
Steve Falkenburg
Reported 2009-04-01 20:53:32 PDT
A bug was introduced in r27717 that broke the "icon database thread is running" check. This check is currently always returning false. This means we don't wait until the thread has shut down during icon database closes, and also allows the icon database to be disposed out from under the icon database thread.
Attachments
Set m_syncThreadRunning (1.21 KB, patch)
2009-04-01 20:55 PDT, Steve Falkenburg
oliver: review+
Steve Falkenburg
Comment 1 2009-04-01 20:55:58 PDT
Created attachment 29182 [details] Set m_syncThreadRunning
Oliver Hunt
Comment 2 2009-04-01 21:23:11 PDT
Comment on attachment 29182 [details] Set m_syncThreadRunning r=me
Oliver Hunt
Comment 3 2009-04-01 21:23:12 PDT
Comment on attachment 29182 [details] Set m_syncThreadRunning r=me
Steve Falkenburg
Comment 4 2009-04-01 21:52:33 PDT
Fixed in r42163.
Note You need to log in before you can comment on or make changes to this bug.