        https://bugs.webkit.org/show_bug.cgi?id=24997         Race conditions in icon database threading code

m_syncThreadRunning set was mistakenly eliminated in r27717.
        This reintroduces it.

        Reviewed by Oliver Hunt.

        * loader/icon/IconDatabase.cpp:
        (WebCore::IconDatabase::open): Set m_syncThreadRunning.



Canonical link: https://commits.webkit.org/34218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42163 268f45cc-cd09-0410-ab3c-d52691b4dbfc