WebCore/loader/icon/IconDatabase.cpp
@@ -150,6 +150,7 @@ bool IconDatabase::open(const String& databasePath)
     // completes and m_syncThreadRunning is properly set
     m_syncLock.lock();
     m_syncThread = createThread(IconDatabase::iconDatabaseSyncThreadStart, this, "WebCore: IconDatabase");
+    m_syncThreadRunning = m_syncThread;
     m_syncLock.unlock();
     if (!m_syncThread)
         return false;
